--- a/Dockerfile-kaniko
+++ b/Dockerfile-kaniko
@@ -10,4 +10,4 @@ RUN curl "https://$TWISTCLI_USER:$TWISTCLI_PW@us-east1.cloud.twistlock.com/us-2-
 RUN chmod a+x twistcli
 
 #Execute image scan from within this container
-RUN ./twistcli images scan --containerized --address https://us-east1.cloud.twistlock.com/us-2-158320372 --user $TWISTCLI_USER --password $TWISTCLI_PW pcs-log4j-conainerized
+RUN ./twistcli images scan --details --containerized --address https://us-east1.cloud.twistlock.com/us-2-158320372 --user $TWISTCLI_USER --password $TWISTCLI_PW pcs-log4j-conainerized
